examples/failing/state.cz
# cozy includes a miniature version of Redux built in.
let inc = "INCREMENT";
let dec = "DECREMENT";

let counter = fn(state = 0, action) {
    if (action["type"] == inc) {
        return state + 1;
    } else if (action["type"] == dec) {
        return state - 1;
    } else {
        return state;
    }
};

let store = create_state(counter, 0);

store["subscribe"](fn () {
    print(store["state"]);
});

store["dispatch"]({ "type": inc });
store["dispatch"]({ "type": inc });
store["dispatch"]({ "type": dec });
